# face

./: .gitignore  CMakeLists.txt  Service.cpp  Service.h  face_quality.cpp  run.sh
common/include/: comm_func.h  demo_comm.h  libjpeg_api.h  sdk_comm_api.h  sdk_config.h
common/src/: comm_func.c  libjpeg_api.c  sdk_photo_process.c
data/: dst_jpg_feat_cusk.txt  src_jpg_feat_cusk.txt
include/: fsl0_common_struct.h  fsl0_compare.h  fsl0_detect.h  fsl0_feature.h  fsl0_interface.h  fsl0_macro.h
include/3rd_inc/libjpeg/: jmorecfg.h
license/: CBG_LinCPU_Face_ImageFeature---30-Trial-one-stage.cert  authFile.v2c  fingerprint.c2v  get_auth_file.py  hasp_update_linux_x86_64  旷世SDK服务说明.docx
src/: ErrorCode.h  HttpResponse.cpp  HttpResponse.h  Service.cpp  Service.h  decode.h  encode.h
